# tp-pc-port

./: .gitignore  README.md
include/: global.h
include/Z2AudioLib/: Z2SoundHandles.h
include/d/: d_cursor_mng.h  d_resorce.h  d_s_menu.h  d_stage.h
include/d/actor/: d_a_b_ds.h
include/f_ap/: f_ap_game.h
include/f_op/: f_op_actor_mng.h
include/f_pc/: f_pc_manager.h
include/m_Do/: m_Do_audio.h
libs/JSystem/include/JSystem/: JGeometry.h
libs/JSystem/include/JSystem/J3DGraphAnimator/: J3DAnimation.h  J3DJointTree.h  J3DMaterialAttach.h  J3DModelData.h  J3DShapeTable.h
libs/JSystem/include/JSystem/J3DGraphBase/: J3DFifo.h  J3DPacket.h  J3DShape.h  J3DTevs.h  J3DTexture.h  J3DVertex.h
libs/JSystem/include/JSystem/J3DGraphLoader/: J3DAnmLoader.h  J3DClusterLoader.h  J3DMaterialFactory.h  J3DModelLoader.h  J3DShapeFactory.h
libs/JSystem/include/JSystem/JGadget/: define.h  search.h
libs/JSystem/include/JSystem/JKernel/: JKRExpHeap.h  JKRHeap.h
libs/JSystem/include/JSystem/JMath/: JMath.h
libs/JSystem/include/JSystem/JMessage/: data.h
libs/JSystem/include/JSystem/JStudio/JStudio/: functionvalue.h
libs/JSystem/include/JSystem/JSupport/: JSUInputStream.h  JSupport.h
libs/JSystem/include/JSystem/JUtility/: JUTTexture.h
libs/JSystem/src/J2DGraph/: J2DAnmLoader.cpp  J2DPane.cpp
libs/JSystem/src/J3DGraphAnimator/: J3DJoint.cpp  J3DJointTree.cpp  J3DModel.cpp  J3DModelData.cpp  J3DMtxBuffer.cpp  J3DShapeTable.cpp
libs/JSystem/src/J3DGraphBase/: J3DDrawBuffer.cpp  J3DGD.cpp  J3DMatBlock.cpp  J3DMaterial.cpp  J3DPacket.cpp  J3DShape.cpp  J3DShapeDraw.cpp  J3DShapeMtx.cpp  J3DStruct.cpp  J3DSys.cpp  J3DTevs.cpp  J3DTexture.cpp  J3DTransform.cpp
libs/JSystem/src/J3DGraphLoader/: J3DAnmLoader.cpp  J3DClusterLoader.cpp  J3DMaterialFactory.cpp  J3DModelLoader.cpp  J3DShapeFactory.cpp
libs/JSystem/src/JAudio2/: JAIStream.cpp  JAIStreamMgr.cpp  JASAiCtrl.cpp  JASAramStream.cpp  JASCalc.cpp  JASDSPInterface.cpp  JASHeapCtrl.cpp  JASReport.cpp  JASSeqParser.cpp
libs/JSystem/src/JFramework/: JFWDisplay.cpp  JFWSystem.cpp
libs/JSystem/src/JGadget/: std-streambuf.cpp
libs/JSystem/src/JKernel/: JKRAramArchive.cpp  JKRArchivePri.cpp  JKRArchivePub.cpp  JKRCompArchive.cpp  JKRDecomp.cpp  JKRDvdAramRipper.cpp  JKRDvdArchive.cpp  JKRDvdRipper.cpp  JKRExpHeap.cpp  JKRHeap.cpp  JKRMemArchive.cpp  JKRSolidHeap.cpp  JKRThread.cpp
libs/JSystem/src/JMath/: JMath.cpp
libs/JSystem/src/JStudio/JStudio_JStage/: object-actor.cpp
libs/JSystem/src/JSupport/: JSUMemoryStream.cpp
libs/JSystem/src/JUtility/: JUTCacheFont.cpp  JUTDbPrint.cpp  JUTException.cpp  JUTFader.cpp  JUTResFont.cpp  JUTTexture.cpp  JUTVideo.cpp
libs/dolphin/include/dolphin/: os.h  types.h
libs/dolphin/include/dolphin/gx/: GXStruct.h  GXVert.h
libs/dolphin/include/dolphin/os/: OSExec.h
libs/revolution/include/revolution/: mtx.h  os.h  types.h
libs/revolution/include/revolution/gx/: GXCommandList.h  GXEnum.h  GXFifo.h  GXManage.h  GXStruct.h  GXTexture.h  GXTransform.h  GXVerify.h  GXVert.h
libs/revolution/include/revolution/os/: OSExec.h
libs/revolution/include/revolution/vi/: vitypes.h
pc/: CMakeLists.txt  TP_PORT_PLAN.md
pc/include/: pc_bmg_bswap.h  pc_bswap.h  pc_gx_internal.h  pc_j3d_bswap.h  pc_platform.h
pc/include/assets/: black_tex.h  font_data.h  l_Egnd_mantDL.h  l_Egnd_mantPAL.h  l_Egnd_mantTEX.h  l_Egnd_mantTEX_U.h  l_J_Ohana00_64TEX.h  l_J_Ohana01_64128_0419TEX.h  l_J_hana00DL.h  l_J_hana00_cDL.h  l_J_hana01DL.h  l_J_hana01_c_00DL.h  l_J_hana01_c_01DL.h  l_M_Hijiki00TEX.h  l_M_Kusa_9qDL.h  l_M_Kusa_9q_cDL.h  l_M_TenGusaDL.h  l_M_kusa05_RGBATEX.h  l_Tengusa_matDL.h  l_kusa9q_l4_matDL.h  l_kusa9q_matDL.h  l_mat2DL__d_a_grass.h  l_mat2Light4DL.h  l_matDL__d_a_grass.h  l_matLight4DL.h  l_sightDL__d_a_player.h  msg_data.h  msg_data_fr.h  msg_data_ge.h  msg_data_it.h  msg_data_sp.h
pc/shaders/: default.frag
pc/src/: pc_aram.cpp  pc_audio.cpp  pc_card.cpp  pc_dvd.cpp  pc_gx.cpp  pc_gx_tev.cpp  pc_gx_texture.cpp  pc_macos.m  pc_main.cpp  pc_misc.cpp  pc_mtx.cpp  pc_os.cpp  pc_pad.cpp  pc_stubs.cpp  pc_vi.cpp
src/: DynamicLink.cpp
src/SSystem/SComponent/: c_list.cpp  c_node.cpp
src/Z2AudioCS/: SpkTable.cpp  SpkWave.cpp
src/Z2AudioLib/: Z2Creature.cpp  Z2SoundHandles.cpp  Z2SoundObject.cpp
src/c/: c_dylink.cpp
src/d/: d_attention.cpp  d_bg_s.cpp  d_bg_w_kcol.cpp  d_camera.cpp  d_com_inf_game.cpp  d_com_static.cpp  d_drawlist.cpp  d_envse.cpp  d_event_manager.cpp  d_eye_hl.cpp  d_menu_fmap_map.cpp  d_meter_HIO.cpp  d_msg_flow.cpp  d_ovlp_fade.cpp  d_particle.cpp  d_resorce.cpp  d_s_logo.cpp  d_s_menu.cpp  d_s_name.cpp  d_s_play.cpp  d_s_room.cpp  d_save.cpp  d_stage.cpp
src/d/actor/: d_a_alink.cpp  d_a_alink_demo.inc  d_a_alink_effect.inc  d_a_alink_wolf.inc  d_a_andsw.cpp  d_a_bd.cpp  d_a_bg.cpp  d_a_bg_obj.cpp  d_a_cstaF.cpp  d_a_e_dd.cpp  d_a_e_dn.cpp  d_a_e_fb.cpp  d_a_e_gb.cpp  d_a_e_hm.cpp  d_a_e_hz.cpp  d_a_e_mf.cpp  d_a_e_mk.cpp  d_a_e_nz.cpp  d_a_e_vt.cpp  d_a_e_ww.cpp  d_a_e_yr.cpp  d_a_grass.cpp  d_a_horse.cpp  d_a_kago.cpp  d_a_mg_fish.cpp  d_a_mg_rod.cpp  d_a_npc_aru.cpp  d_a_npc_ash.cpp  d_a_npc_ashB.cpp  d_a_npc_bou.cpp  d_a_npc_clerka.cpp  d_a_npc_clerkb.cpp  d_a_npc_clerkt.cpp  d_a_npc_gnd.cpp  d_a_npc_gra.cpp  d_a_npc_gro.cpp  d_a_npc_henna.cpp  d_a_npc_hoz.cpp  d_a_npc_impal.cpp  d_a_npc_kasi_mich.cpp  (+58 more)
src/f_ap/: f_ap_game.cpp
src/f_op/: f_op_actor.cpp  f_op_actor_mng.cpp  f_op_msg_mng.cpp  f_op_overlap.cpp  f_op_overlap_mng.cpp  f_op_overlap_req.cpp  f_op_scene_req.cpp
src/f_pc/: f_pc_base.cpp  f_pc_create_req.cpp  f_pc_draw.cpp  f_pc_executor.cpp  f_pc_layer_tag.cpp  f_pc_manager.cpp  f_pc_method.cpp  f_pc_node_req.cpp  f_pc_stdcreate_req.cpp
src/m_Do/: m_Do_DVDError.cpp  m_Do_controller_pad.cpp  m_Do_dvd_thread.cpp  m_Do_ext.cpp  m_Do_graphic.cpp  m_Do_lib.cpp  m_Do_machine.cpp  m_Do_main.cpp
